--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root {
-    --bg: #13110D;
-    --fg: #F2F1EC;
-    --accent: #788fA6;
+    --bg: #09100d;
+    --fg: #e8f0ec;
+    --accent: #6ebf97;
+    --primary: #9ccab3;
+    --secondary: #3a7658;
 }
 
 body {
