--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -4,7 +4,9 @@
     overflow: hidden;
 }
 .titles h2 {
+    font-size: 32px;
     display: block;
+    letter-spacing: 0.2px;
 }
 .nav {
     list-style-type: none;
@@ -23,9 +25,16 @@
     text-align: right;
 }
 .nav a {
+    font-size: 20px;
     color: var(--accent);
     display: block;
     text-decoration: none;
     cursor: pointer;
     font-weight: bold;
+    letter-spacing: 0.2px;
+    transition: 0.2s;
+}
+.nav a:hover {
+    color: var(--primary);
+    text-shadow: 0px 0px 3px #fff4;
 }
